--- a/src/Components/People/Person/Person.module.css
+++ b/src/Components/People/Person/Person.module.css
@@ -6,3 +6,13 @@
     padding: 16px;
     text-align: center;
 }
+
+.input {
+	background-color: lightblue;
+}
+
+@media (min-width: 500px) {
+	.Person {
+		width: 450px;
+	}
+}
