--- a/src/Components/Cockpit/Cockpit.module.css
+++ b/src/Components/Cockpit/Cockpit.module.css
@@ -1,31 +1,7 @@
-
-
-.red {
-	color: red;
-}
-
-.bold {
-	font-weight: bold;
-}
-
-.input {
-	background-color: lightgreen;
-}
-
-.Cockpit button {
-	background-color: blue;
-	color: white;
-	cursor: pointer;
-}
-
-.Cockpit button:hover {
-	background-color: lightblue;
-}
-
-.Cockpit button.Green {
+.App button.Green {
 	background-color: green;
 }
 
-.Cockpit button.Green:hover {
+.App button.Green:hover {
 	background-color: lightgreen;
 }
