--- a/src/Components/People/Person/Person.module.css
+++ b/src/Components/People/Person/Person.module.css
@@ -11,6 +11,10 @@
 	background-color: lightblue;
 }
 
+.deletable:hover {
+  cursor: pointer;
+}
+
 @media (min-width: 500px) {
 	.Person {
 		width: 450px;
